--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.8",
+    "grammy": "^1.21.1",
+    "groq-sdk": "^0.3.1",
+    "instagram-scraper-api": "^1.0.1",
     "lowdb": "^7.0.1",
     "node-telegram-bot-api": "^0.65.1"
   }
