--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "groq-sdk": "^0.3.1",
     "instagram-scraper-api": "^1.0.1",
     "lowdb": "^7.0.1",
-    "node-telegram-bot-api": "^0.65.1"
+    "node-telegram-bot-api": "^0.65.1",
+    "stream-promise": "^3.2.0",
+    "ytdl-core": "^4.11.5"
   }
 }
